InvoicingAssignment/src/objects/Selling_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Selling Items</relationshipLabel>
        <relationshipName>Selling_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Selling Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selling Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AmountValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
        <errorMessage>Selling item amount should be grater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductFieldValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c ,&quot;Product&quot;), ISBLANK(Product__c))</errorConditionFormula>
        <errorMessage>If Type is &apos;Product&apos; then this Product field must be populated</errorMessage>
    </validationRules>
</CustomObject>